--- a/css/styles_about.css
+++ b/css/styles_about.css
@@ -15,7 +15,7 @@ img {
     flex-wrap: wrap;
     align-items: stretch;
     justify-content: space-between;
-    padding: 10% 10%;
+    padding: 11% 10%;
 }
 
 .about_image {
@@ -67,6 +67,7 @@ img {
     padding-top: 3%;
     text-align: center;
     color: #F0EFEF;
+    font-weight: 400;
 }
 
 .center_content {
@@ -151,9 +152,13 @@ img {
     }
 
     .sub_content_text_container {
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding-top: 50px;
+        padding-bottom: 50px;
         text-align: center;
+    }
+
+    .content p {
+        width: 70%;
     }
 }
 
@@ -174,6 +179,10 @@ img {
 
     #sub_content_line {
         left: 30px;
+    }
+
+    #contact {
+        width: 60%;
     }
 }
 
